# JayaAbadi

./: .gitignore  README.md  main.py  pyproject.toml
app/: business_logic.py  config.py  db.py  main.py  ocr.py  utils.py
app_frontend/: main.py
tests/: test_business_logic.py  test_db.py  test_ocr.py
