[tool.poetry]
name = "jayaabadi"
version = "0.1.0"
description = ""
authors = ["Meraldo Antonio <meraldo@.antonio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.2.3"
boto3 = "^1.36.11"
streamlit = "^1.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
